--- a/css/main.css
+++ b/css/main.css
@@ -11,7 +11,9 @@
    Base styles: opinionated defaults
    ========================================================================== */
 
-html {
+
+
+   html {
   color: #222;
   font-size: 1em;
   line-height: 1.4;
@@ -86,6 +88,114 @@ textarea {
 /* ==========================================================================
    Author's custom styles
    ========================================================================== */
+
+/*-------------------BASE HEADER - FOOTER STYLES ----------------------*/
+   
+
+header {
+  display: flex;
+  justify-content: center;
+}
+
+header .content-wrapper {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-flow: row wrap;
+}
+
+header nav ul {
+  display: flex;
+  justify-content: space-around;
+}
+
+footer {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+}
+
+footer .social-icons {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+ }
+
+ footer .social-icons p {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+ }
+
+
+
+/* HERO AREA */
+
+.hero-area {
+  display: flex;
+  justify-content: center;
+}
+
+/* ASIDE AREA */
+
+aside {
+  display: flex;
+  justify-content: center;
+}
+
+/* FEATURES AREA */
+
+.features {
+  display: flex;
+  justify-content: center;
+}
+
+.features .features-items {
+  display: flex;
+  justify-content: center;
+  align-items: flex-start;
+  flex-flow: row wrap;
+}
+
+/* REVIEWS AREA */
+
+.reviews {
+  display: flex;
+  justify-content: center;
+}
+
+/* ==========================================================================
+   ABOUT Page
+   ========================================================================== */
+
+.mission {
+  display: flex;
+  justify-content: center;
+}
+
+.contact-section {
+  display: flex;
+  justify-content: center;
+}
+
+
+/* ==========================================================================
+   FAQ Page
+   ========================================================================== */
+
+.faq {
+    display: flex;
+    justify-content: center;
+  }
+  
+.faq .content-wrapper {
+    display: flex;
+    justify-content: center;
+    align-items: flex-start;
+    flex-flow: row wrap;
+  }
+
 
 /* ==========================================================================
    Helper classes
