--- a/css/main.css
+++ b/css/main.css
@@ -89,12 +89,17 @@ textarea {
    Author's custom styles
    ========================================================================== */
 
+.content-wrapper {
+  width: 90%;
+  margin: 50px 0;
+}   
 /*-------------------BASE HEADER - FOOTER STYLES ----------------------*/
    
 
 header {
   display: flex;
   justify-content: center;
+  padding: 15px 0;
 }
 
 header .content-wrapper {
@@ -102,11 +107,24 @@ header .content-wrapper {
   justify-content: center;
   align-items: center;
   flex-flow: row wrap;
+  margin: 0;
+}
+
+.header-divider {
+  width: 100%;
+  height: 1px;
+  margin: 10 px 0 20px 0;
+}
+
+header nav {
+  width: 60%;
+
 }
 
 header nav ul {
   display: flex;
   justify-content: space-around;
+  width: 100%;
 }
 
 footer {
@@ -114,6 +132,18 @@ footer {
   flex-direction: column;
   align-items: center;
   text-align: center;
+}
+
+footer p {
+  margin: 0;
+}
+
+footer .content-wrapper {
+  width: 55%;
+}
+
+footer .contact {
+  margin: 
 }
 
 footer .social-icons {
@@ -126,6 +156,10 @@ footer .social-icons {
   display: flex;
   justify-content: center;
   align-items: center;
+ }
+
+ footer .copyright {
+  margin: 20px 0;
  }
 
 
@@ -151,6 +185,15 @@ aside {
   justify-content: center;
 }
 
+.features h2 {
+  margin-bottom: 60px;
+}
+
+.features article {
+  width: 63%;
+  margin: 30px 0;
+}
+
 .features .features-items {
   display: flex;
   justify-content: center;
@@ -158,11 +201,23 @@ aside {
   flex-flow: row wrap;
 }
 
+.features p {
+  margin: 0;
+}
+
 /* REVIEWS AREA */
 
 .reviews {
   display: flex;
   justify-content: center;
+}
+
+.reviews h2 {
+  width:
+}
+
+.reviews h3 {
+  width: 55%;
 }
 
 /* ==========================================================================
@@ -179,6 +234,10 @@ aside {
   justify-content: center;
 }
 
+.contact-content p {
+  margin: 0;
+}
+
 
 /* ==========================================================================
    FAQ Page
@@ -187,14 +246,24 @@ aside {
 .faq {
     display: flex;
     justify-content: center;
-  }
+}
   
 .faq .content-wrapper {
     display: flex;
     justify-content: center;
     align-items: flex-start;
     flex-flow: row wrap;
-  }
+    margin: 50px 0 0 0;
+}
+
+.faq h2 {
+  margin: 40px 0;
+}  
+
+.faq-content {
+  margin-bottom: 50px;
+}
+
 
 
 /* ==========================================================================
