--- a/css/main.css
+++ b/css/main.css
@@ -99,12 +99,15 @@ html {
 body {
   font-family: 'Open Sans', sans-serif;
   font-size: 1em;
+  color: #e2e3ed;
   text-align: left;
 }
 
 ul,
 ol {
   list-style-type: none;
+  margin: 0;
+  padding: 0;
 
 }
 
@@ -117,6 +120,7 @@ a {
 h2 {
   font-family: 'Poppins', sans-serif;
   font-size: 1.875em;
+  font-weight: 500;
 }
 
 h3, 
@@ -124,6 +128,7 @@ h4 {
   font-family: 'Poppins', sans-serif;
   margin: 20px 0;
   font-size: 1.125em;
+  font-weight: 500;
 }
 
 p {
@@ -146,6 +151,7 @@ header {
   display: flex;
   justify-content: center;
   padding: 15px 0;
+  background-color: #202322;
 }
 
 header .content-wrapper {
@@ -157,6 +163,7 @@ header .content-wrapper {
 }
 
 .header-divider {
+  color: #3a3a3a;
   width: 100%;
   height: 1px;
   margin: 10 px 0 20px 0;
@@ -164,7 +171,9 @@ header .content-wrapper {
 
 header nav {
   width: 60%;
-
+  font-size: 1.125em;
+  font-weight: 700;
+  text-transform: uppercase;
 }
 
 header nav ul {
@@ -173,11 +182,16 @@ header nav ul {
   width: 100%;
 }
 
+header nav ul li {
+  font-size: 1.125em;
+}
+
 footer {
   display: flex;
   flex-direction: column;
   align-items: center;
   text-align: center;
+  background-color: #202322;
 }
 
 footer p {
@@ -209,6 +223,7 @@ footer .social-icons {
  }
 
 
+
 /* -------------------- Mobile Styles - Homepage -------------------- */
 
 
@@ -219,11 +234,45 @@ footer .social-icons {
   justify-content: center;
 }
 
+.hero-area h1 {
+  font-size: 2.25em;
+  font-family: 'Poppins', Helvetica, Arial, sans-serif;
+  font-weight: 500;
+  line-height: 1.2;
+}
+
 /* ASIDE AREA */
 
 aside {
+  background-color: #527158;
   display: flex;
   justify-content: center;
+}
+
+aside .form {
+  margin-top: 30px;
+}
+ 
+input[type=text] {
+  box-sizing: border-box;
+  width: 100%;
+  color: #2a423a;
+  font-style: italic;
+  padding: 1em;
+}
+ 
+input[type=button] {
+  width: 100%;
+  padding: 20px 0;
+  margin-top: 20px;
+  background-color: #2a423a;
+  font-family: 'Poppins', Helvetica, Arial, sans-serif;
+  font-weight: 500;
+  font-size: 1.125em;
+  color: #e2e3ed;
+  border: none;
+  text-align: center;
+  text-transform: uppercase;
 }
 
 /* FEATURES AREA */
@@ -250,18 +299,21 @@ aside {
 }
 
 .features p {
+  text-align: center;
   margin: 0;
 }
 
 /* REVIEWS AREA */
 
 .reviews {
+  background-color: #2a423a;
   display: flex;
   justify-content: center;
 }
 
 .reviews h2 {
   margin-bottom: 40px;
+  line-height: 1;
 }
 
 .reviews h3 {
@@ -274,11 +326,13 @@ aside {
    ========================================================================== */
 
 .mission {
+  background-color: #527158;
   display: flex;
   justify-content: center;
 }
 
 .contact-section {
+  background-color: #2a423a;
   display: flex;
   justify-content: center;
 }
@@ -293,6 +347,7 @@ aside {
    ========================================================================== */
 
 .faq {
+  background-color: #527158;
   display: flex;
   justify-content: center;
 }
@@ -311,7 +366,7 @@ aside {
 }  
 
 .faq-content {
-  margin-bottom: 50px;
+  margin-bottom: 1.333;
 }
 
 
@@ -413,6 +468,15 @@ aside {
   margin: 100px 0;
 }
 
+h2 {
+  font-size: 2.25em;
+  line-height: 1.333;
+}
+
+h3 {
+  font-size: 1.5em;
+  line-height: 1.25;
+
   /* Header */
 
 
@@ -423,6 +487,10 @@ header {
 header .content-wrapper {
   width: 100%;
   justify-content: space-between;
+}
+
+header figure {
+  width: 30%;
 }
 
 header nav {
@@ -438,6 +506,12 @@ header nav ul {
 }
 
   /* Hero Area */
+
+.hero-area h1 {
+  font-size: 3em;
+  line-height: 1;
+  margin: 0;
+}
 
   /* Aside */
 
@@ -455,6 +529,10 @@ aside .content-wrapper .form {
 }
 
 /* Features */
+
+.features h2 {
+  margin-bottom: 20px;
+}
 
 .features article {
   display: flex;
@@ -474,8 +552,17 @@ aside .content-wrapper .form {
   justify-content: space-between;
 }
 
+.reviews h2 {
+  width: 85%;
+}
+
 .reviews article div {
   width: 49%;
+}
+
+.reviews h3 {
+  width: 75%;
+  margin: 0;
 }
 
 /* Footer */
@@ -489,6 +576,7 @@ footer .content-wrapper {
   display: flex;
   justify-content: space-between;
   align-items: center;
+  flex-direction: row;
 }
 
 footer .contact {
@@ -525,6 +613,10 @@ About Page
   align-items: flex-start;
 }
 
+.contact-content h4 {
+  font-size: 1.5em;
+}
+
 /* ==========================================================================
      FAQ Page
      ========================================================================== */
@@ -539,6 +631,12 @@ About Page
   
 .faq h2 {
   width: 100%;
+}
+
+.faq h4,
+.faq p {
+  font-size: .875em;
+  line-height: 1.125;
 }
 
 
@@ -556,8 +654,23 @@ About Page
     padding: 15px 0;
   }
 
+  h2 {
+    font-size: 2.25em;
+  }
+
+  h3,
+  h4 {
+    font-size: 1.875em;
+  }
+
+  p {
+    font-size: 1.125em;
+    line-height: 1.333;
+  }
+
   /* Hero */
   .hero-area h1 {
+    3.75em;
     width: 80%;
   }
 
@@ -568,6 +681,10 @@ About Page
 
   aside .content-wrapper .form-description, aside .content-wrapper .form {
     width: 30%;
+  }
+
+  .form-description p {
+    font-size: 1.125em;
   }
 
   /*features */
@@ -582,8 +699,16 @@ About Page
 
   /* reviews */
 
+  .reviews h2 {
+    padding-bottom: 50px;
+  }
+  
   .reviews article div {
     width: 42%;
+  }
+
+  footer h4 {
+    font-size: 1.875em;
   }
 
 /* ==========================================================================
@@ -592,6 +717,11 @@ About Page
 
   .mission h2, .contact-section .content-wrapper h2 {
     width: 95%;
+    font-size: 3em;
+  }
+
+  .contact-content h4 {
+    font-size: 1.875em;
   }
 
   
@@ -601,8 +731,14 @@ About Page
 
   .faq h2 {
     width: 100%;
+    font-size: 3em;
   }
 
+  .faq h4,
+  .faq p {
+    font-size: 1.125em;
+    line-height: 1;
+  }
 }
 
 /* ==========================================================================
