--- a/css/main.css
+++ b/css/main.css
@@ -639,6 +639,10 @@ About Page
   width: 45%;
 }
 
+.map figure {
+  padding-bottom: 45.5%;
+}
+
 .contact-section .content-wrapper h2 {
   width: 80%;
 }
@@ -756,6 +760,9 @@ About Page
     font-size: 3em;
   }
 
+  .map figure {
+    padding-bottom: 37.5%;
+  }
   .contact-content h4 {
     font-size: 1.875em;
   }
