--- a/css/main.css
+++ b/css/main.css
@@ -136,16 +136,16 @@ p {
   line-height: 1.285;
 }
 
-address {
-  font-style: normal;
-}
-
 img {
   width: 100%;
 }
 
 figure {
   margin: 0;
+}
+
+address {
+  font-style: normal;
 }
 
 .content-wrapper {
@@ -172,11 +172,15 @@ header .content-wrapper {
   flex-flow: row wrap;
 }
 
+header figure {
+  width: 60%;
+}
+
 .header-divider {
   color: #3a3a3a;
-  width: 100%;
   height: 1px;
-  margin: 10 px 0 20px 0;
+  width: 100%;
+  margin: 10px 0 20px 0;
 }
 
 header nav {
@@ -236,20 +240,15 @@ footer .social-icons {
 
 /* -------------------- Mobile Styles - Homepage -------------------- */
 
-header figure {
-  width: 60%;
-}
-
 /* HERO AREA */
 
 .hero-area {
-  display: flex;
-  justify-content: center;
   background: url('../css/unplugged-retreat.jpg');
   background-size: cover;
-  background-repeat: no-repeat #333;
   background-position: center;
   min-height: 500px;
+  display: flex;
+  justify-content: center;
 }
 
 .hero-area h1 {
@@ -317,6 +316,11 @@ input[type=button] {
   justify-content: center;
   align-items: flex-start;
   flex-flow: row wrap;
+}
+
+.features i {
+  font-size: 3.75em;
+  margin-bottom: 40px;
 }
 
 .features p {
@@ -399,10 +403,15 @@ input[type=button] {
 
 .faq h2 {
   margin-bottom: 40px;
+  line-height: 1;
 }  
 
 .faq-content {
-  margin-bottom: 1.333;
+  margin-bottom: 50px;
+}
+
+.faq-content h4 {
+  line-height: 1.333;
 }
 
 
@@ -512,6 +521,7 @@ h2 {
 h3 {
   font-size: 1.5em;
   line-height: 1.25;
+}  
 
   /* Header */
 
@@ -543,6 +553,11 @@ header nav ul {
 
   /* Hero Area */
 
+
+.hero-area {
+    min-height: 600px;
+}
+  
 .hero-area h1 {
   font-size: 3em;
   line-height: 1;
@@ -592,6 +607,12 @@ aside .content-wrapper .form {
   width: 85%;
 }
 
+.reviews article figure, 
+.reviews article div {
+  width: 49%;
+}
+
+.reviews article figure,
 .reviews article div {
   width: 49%;
 }
@@ -617,6 +638,15 @@ footer .content-wrapper {
 
 footer .contact {
   margin-bottom: 0;
+}
+
+footer h4 {
+  font-size: 1.5em;
+  margin-bottom: 40px;
+}
+
+footer p {
+  line-height: 1.285;
 }
 
 footer .copyright {
@@ -690,29 +720,29 @@ About Page
   }
 
   /* Header */
-  header {
-    padding: 15px 0;
-  }
+header {
+  padding: 15px 0;
+}
 
-  h2 {
-    font-size: 2.25em;
-  }
+h2 {
+  font-size: 2.25em;
+}
 
-  h3,
-  h4 {
-    font-size: 1.875em;
-  }
+h3,
+h4 {
+  font-size: 1.875em;
+}
 
-  p {
-    font-size: 1.125em;
-    line-height: 1.333;
-  }
+p {
+  font-size: 1.125em;
+  line-height: 1.333;
+}
 
   /* Hero */
-  .hero-area h1 {
-    3.75em;
-    width: 80%;
-  }
+.hero-area h1 {
+  font-size: 3.75em;
+  width: 80%;
+}
 
   /* Aside */
   aside .content-wrapper {
@@ -720,7 +750,7 @@ About Page
   }
 
   aside .content-wrapper .form-description, aside .content-wrapper .form {
-    width: 30%;
+    width: 40%;
   }
 
   .form-description p {
@@ -755,14 +785,16 @@ About Page
      About Page
      ========================================================================== */
 
-  .mission h2, .contact-section .content-wrapper h2 {
-    width: 95%;
-    font-size: 3em;
-  }
 
-  .map figure {
-    padding-bottom: 37.5%;
-  }
+.map figure {
+  padding-bottom: 37.5%;
+}     
+
+.mission h2, .contact-section .content-wrapper h2 {
+  width: 95%;
+  font-size: 3em;
+}
+
   .contact-content h4 {
     font-size: 1.875em;
   }
